added the calendar button and the checkboxes to the navigation bar.

--- a/style/_functions.scss
+++ b/style/_functions.scss
@@ -74,6 +74,11 @@
     font-size: 2em;
 }
 
+// Font size of 2.5em
+.fs-25 {
+    font-size: 2.5em;
+}
+
 // Font size of 1.75em
 .fs-175 {
     font-size: 1.75em;
@@ -184,4 +189,9 @@
 // Grey border of 0.5px
 .border-grey-05 {
     border: 0.5px solid $dark-grey-2;
+}
+
+// Opacity of 0.5
+.opacity-05 {
+    opacity: 0.5;
 }
