--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -19,10 +19,12 @@ $medium-blue-1: #5B9CFF;
 $medium-blue-2: #619AF0;
 $medium-blue-3: #A4AAF9;
 $medium-blue-4: #448CF8;
-$medium-blue-5: #2D7AFF;;
+$medium-blue-5: #2D7AFF;
 
 $light-blue-1: #A5C3F7;
 $light-blue-2: #73B9FF;
+$light-blue-3: #8AB5FF;
+$light-blue-4: #6CA3FF;
 
 $lighter-blue-1: #B8F5FF;
 $lighter-blue-2: #B5C9FF;
