added the schedule.

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -28,5 +28,7 @@ $light-blue-4: #6CA3FF;
 
 $lighter-blue-1: #B8F5FF;
 $lighter-blue-2: #B5C9FF;
+$lighter-blue-3: #DFE8FF;
+$lighter-blue-4: #E0F9FF;
 
 $turquoise-1: #A1FFFF;
