--- a/style/mainWindow/main.scss
+++ b/style/mainWindow/main.scss
@@ -6,7 +6,7 @@
 
 @import "components/_header.scss";
 @import "components/_navigation-bar.scss";
-@import "components/_day-menu.scss";
+@import "components/_tasks-box.scss";
 @import "components/_task-card.scss";
 @import "components/_schedule.scss";
 @import "components/_task-page.scss";
