added main structure of the task card.

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -20,6 +20,7 @@ $medium-blue-2: #619AF0;
 $medium-blue-3: #A4AAF9;
 $medium-blue-4: #448CF8;
 $medium-blue-5: #2D7AFF;
+$medium-blue-6: #84AEFF;
 
 $light-blue-1: #A5C3F7;
 $light-blue-2: #73B9FF;
@@ -30,5 +31,11 @@ $lighter-blue-1: #B8F5FF;
 $lighter-blue-2: #B5C9FF;
 $lighter-blue-3: #DFE8FF;
 $lighter-blue-4: #E0F9FF;
+$lighter-blue-5: #E4EFFF;
 
 $turquoise-1: #A1FFFF;
+$turquoise-2: #D5FFFF;
+
+$light-green-1: #C0FFB5;
+
+$light-red-1: #FF8080;
