--- a/style/mainWindow/components/_task-card.scss
+++ b/style/mainWindow/components/_task-card.scss
@@ -1,161 +1,42 @@
 
 .task-card {
-    position: relative;
-    height: 20%;
-    left: 0;
-    // margin: 0.2em;
-    // border-radius: 0.5em;
-    background-color: $light-grey-3;
-    transition: all 0.3s;
+    height: 23%;
+    margin-top: 1.5rem;
+    width: 75%;
+    display: flex;
 
-    &:not(:last-child) {
-        margin-bottom: 0.3rem;
+    & .__main {
+        background: linear-gradient(155deg, $medium-blue-6, $turquoise-2 150%);
+        flex-basis: 100%;
+        border-radius: 0.5rem;
     }
 
-    
-    & .__title {
-        position: absolute;
-        top: 0;
-        left: 0px;
-        z-index: 1;
-        overflow: auto;
-        padding-top: 1rem;
-        text-transform: uppercase;
-        font-weight: 100;
-        color: $dark-grey-1;
-        margin-left: 0;
-        transition: all 0.5s;
-        padding-left: 2rem;
-        width: fit-content;
-        text-decoration: $light-grey-1 underline;
-        font-size: 1.6em;
-        height: 50%;
-    }
-
-    & .__start-time {
-        position: absolute;
-        top: 0;
-        font-weight: 900;
-        font-size: 1.5em;
-        z-index: 1;
-        color: $medium-grey-1;
-        width: fit-content;
-        top: 50%;
-        // transition: all 0.3s;
-        right: 6rem;
-        height: 50%
-    }
-
-    & .__more-button {
-        border-radius: 50%;
-        background-color:$light-grey-3;
-        position: absolute;
-        right: 0.5rem;
-        bottom: 0.5rem;
-        height: 1.3rem;
-        width: 1.3rem;
-        font-weight: 900;
-        font-size: 1.55em;
-        color: $dark-grey-2;
-        text-align: center;
-        transition: all 0.5s;
-        transform: rotateZ(45deg);
-        cursor: pointer;
-
-        &:hover {
-            color: $light-grey-3;
-            background-color: $dark-grey-2;
-        }
-
-    }
-
-    & .__side-bar {
-        position: absolute;
-        width: 0;
-        text-align: center;
-        background-color: $dark-grey-3;
-        height: 100%;
-        z-index: 10;
-        transition: all 0.5s;
-        overflow: hidden;
-        cursor: pointer;
-
-        & .__complete-btn {
-            white-space: nowrap;
-            position: relative;
-            height: 50%;
-            width: 100%;
-            background-color: $dark-grey-3;
-            transition: all 0.3s;
-
-            &:hover {
-                background-color: darkgreen;
-            }
-
-            &:active {
-                transform: scale(1.1);
-            }
-
-        }
-
-        & .__remove-btn {
-            white-space: nowrap;
-            position: relative;
-            height: 50%;
-            width: 100%;
-            background-color: $dark-grey-3;
-            transition: all 0.3s;
-            
-            &:hover {
-                background-color: darkred;
-            }
-
-            &:active {
-                transform: scale(1.1);
-            }
-        }
-
-        & .__icon {
-            position: absolute;
-            left: 0;
-            padding: 0;
-            font-weight: 100;
-            font-size: 2em;
-            color: $light-grey-3;
-            width: 100%;
-            height: 70%;
-        }
-
-        & .__label {
-            position: absolute;
-            left: 0;
-            font-size: 0.8em;
-            text-transform: uppercase;
-            font-weight: 900;
-            color: $light-grey-3;
-            width: 100%;
-            top: 65%;
-        }
-
-    }
-
-    & .__tab-main {
-        position: absolute;
-        background-color: $dark-grey-2;
-        max-width: 1em;
-        left: 0;
+    & .__side-button-box {
+        width: 4rem;
+        order: 2;
         display: flex;
-        transform: translate3d(0, 0, 0);
-        align-items: center;
-        font-size: 2em;
-        padding-left: 0.075em;
-        padding-right: 0.075em;
-        color: $light-grey-3;
-        transition: left 0.5s;
-        z-index: 20;
-        height: 100%;
-        cursor: pointer;
-        
+        justify-content: space-evenly;
+        flex-direction: column;
     }
+
+    & .__side-button {
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 2.75em;
+        padding-right: 0.2rem;
+        border-top-right-radius: 3rem;
+        border-bottom-right-radius: 3rem;
+        border-left: none;
+        background-color: white;
+    }
+
+    & .__complete-btn {
+        color: $light-green-1;
+    }
+
+    & .__remove-btn {
+        color: $light-red-1;
+    }
+
     
 }
