--- a/style/mainWindow/components/_tasks-box.scss
+++ b/style/mainWindow/components/_tasks-box.scss
@@ -1,79 +1,4 @@
 
-@mixin day-title-bar-text {
-    text-align: center;
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 2.5em;
-    color: $dark-grey-2;
-}
-
-
-.__tasks-box {
-    background-color: $medium-grey-3;
-    margin: 0em;
-    display: grid;
-    position: relative;
-    grid-template: "titleT titleD titleD titleS" 1fr
-                   "task task schedule schedule" 10fr
-                   / 3fr 1fr 1fr 3fr;
-
-    & .__title-task {
-        grid-area: titleT;
-        background-color: $dark-grey-2;
-        text-align: left;
-        font-weight: 300;
-        // text-transform: uppercase;
-        padding-left: 1rem;
-        font-size: 2.5em;
-        color: $light-grey-3;
-    }
-
-    & .__title-day-container {
-        grid-area: titleD;
-        position: relative;
-        background-color: $medium-grey-2;
-        
-        & .__day {
-            position: absolute;
-            @include day-title-bar-text;
-            width: 100%;
-            height: 50%;
-        }
-        
-        & .__date-short {
-            position: absolute;
-            @include day-title-bar-text;
-            font-size: 1.8em;
-            color: $dark-grey-1;
-            width: 100%;
-            height: 50%;
-            top: 50%;
-        }
-    }
-
-    & .__title-schedule {
-        grid-area: titleS;
-        background-color: $dark-grey-2;
-        text-align: right;
-        font-weight: 300;
-        // text-transform: uppercase;
-        padding-right: 1rem;
-        font-size: 2.5em;
-        color: $light-grey-3;
-    }
-
-    & .__tasks-box {
-        position: relative;
-        grid-area: task;
-        overflow-y: auto;
-        overflow-x: hidden;
-        border-right: 1px solid $medium-grey-1;          
-
-    }
-
-    & .__schedule {
-        grid-area: schedule;
-        background-color: yellow;
-    }
-   
+.tasks-box {
+    background: linear-gradient($lighter-blue-5, white);
 }
