--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -362,249 +362,61 @@ body {
   height: 50%;
 }
 
-.__tasks-box {
-  background-color: #B9B9B9;
-  margin: 0em;
-  display: -ms-grid;
-  display: grid;
-  position: relative;
-  grid-template: "titleT titleD titleD titleS" 1fr "task task schedule schedule" 10fr / 3fr 1fr 1fr 3fr;
-}
-
-.__tasks-box .__title-task {
-  grid-area: titleT;
-  background-color: #707070;
-  text-align: left;
-  font-weight: 300;
-  padding-left: 1rem;
-  font-size: 2.5em;
-  color: #F9F9F9;
-}
-
-.__tasks-box .__title-day-container {
-  grid-area: titleD;
-  position: relative;
-  background-color: #D9D9D9;
-}
-
-.__tasks-box .__title-day-container .__day {
-  position: absolute;
-  text-align: center;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 2.5em;
-  color: #707070;
-  width: 100%;
-  height: 50%;
-}
-
-.__tasks-box .__title-day-container .__date-short {
-  position: absolute;
-  text-align: center;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 2.5em;
-  color: #707070;
-  font-size: 1.8em;
-  color: #282726;
-  width: 100%;
-  height: 50%;
-  top: 50%;
-}
-
-.__tasks-box .__title-schedule {
-  grid-area: titleS;
-  background-color: #707070;
-  text-align: right;
-  font-weight: 300;
-  padding-right: 1rem;
-  font-size: 2.5em;
-  color: #F9F9F9;
-}
-
-.__tasks-box .__tasks-box {
-  position: relative;
-  grid-area: task;
-  overflow-y: auto;
-  overflow-x: hidden;
-  border-right: 1px solid #86817C;
-}
-
-.__tasks-box .__schedule {
-  grid-area: schedule;
-  background-color: yellow;
+.tasks-box {
+  background: -webkit-gradient(linear, left top, left bottom, from(#E4EFFF), to(white));
+  background: linear-gradient(#E4EFFF, white);
 }
 
 .task-card {
-  position: relative;
-  height: 20%;
-  left: 0;
-  background-color: #F9F9F9;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.task-card:not(:last-child) {
-  margin-bottom: 0.3rem;
-}
-
-.task-card .__title {
-  position: absolute;
-  top: 0;
-  left: 0px;
-  z-index: 1;
-  overflow: auto;
-  padding-top: 1rem;
-  text-transform: uppercase;
-  font-weight: 100;
-  color: #282726;
-  margin-left: 0;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  padding-left: 2rem;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  -webkit-text-decoration: #D6CAB0 underline;
-          text-decoration: #D6CAB0 underline;
-  font-size: 1.6em;
-  height: 50%;
-}
-
-.task-card .__start-time {
-  position: absolute;
-  top: 0;
-  font-weight: 900;
-  font-size: 1.5em;
-  z-index: 1;
-  color: #86817C;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  top: 50%;
-  right: 6rem;
-  height: 50%;
-}
-
-.task-card .__more-button {
-  border-radius: 50%;
-  background-color: #F9F9F9;
-  position: absolute;
-  right: 0.5rem;
-  bottom: 0.5rem;
-  height: 1.3rem;
-  width: 1.3rem;
-  font-weight: 900;
-  font-size: 1.55em;
-  color: #707070;
-  text-align: center;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  -webkit-transform: rotateZ(45deg);
-          transform: rotateZ(45deg);
-  cursor: pointer;
-}
-
-.task-card .__more-button:hover {
-  color: #F9F9F9;
-  background-color: #707070;
-}
-
-.task-card .__side-bar {
-  position: absolute;
-  width: 0;
-  text-align: center;
-  background-color: #3a3835;
-  height: 100%;
-  z-index: 10;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.task-card .__side-bar .__complete-btn {
-  white-space: nowrap;
-  position: relative;
-  height: 50%;
-  width: 100%;
-  background-color: #3a3835;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.task-card .__side-bar .__complete-btn:hover {
-  background-color: darkgreen;
-}
-
-.task-card .__side-bar .__complete-btn:active {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
-.task-card .__side-bar .__remove-btn {
-  white-space: nowrap;
-  position: relative;
-  height: 50%;
-  width: 100%;
-  background-color: #3a3835;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.task-card .__side-bar .__remove-btn:hover {
-  background-color: darkred;
-}
-
-.task-card .__side-bar .__remove-btn:active {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
-.task-card .__side-bar .__icon {
-  position: absolute;
-  left: 0;
-  padding: 0;
-  font-weight: 100;
-  font-size: 2em;
-  color: #F9F9F9;
-  width: 100%;
-  height: 70%;
-}
-
-.task-card .__side-bar .__label {
-  position: absolute;
-  left: 0;
-  font-size: 0.8em;
-  text-transform: uppercase;
-  font-weight: 900;
-  color: #F9F9F9;
-  width: 100%;
-  top: 65%;
-}
-
-.task-card .__tab-main {
-  position: absolute;
-  background-color: #707070;
-  max-width: 1em;
-  left: 0;
+  height: 23%;
+  margin-top: 1.5rem;
+  width: 75%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 2em;
-  padding-left: 0.075em;
-  padding-right: 0.075em;
-  color: #F9F9F9;
-  -webkit-transition: left 0.5s;
-  transition: left 0.5s;
-  z-index: 20;
-  height: 100%;
-  cursor: pointer;
+}
+
+.task-card .__main {
+  background: linear-gradient(155deg, #84AEFF, #D5FFFF 150%);
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  border-radius: 0.5rem;
+}
+
+.task-card .__side-button-box {
+  width: 4rem;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.task-card .__side-button {
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 2.75em;
+  padding-right: 0.2rem;
+  border-top-right-radius: 3rem;
+  border-bottom-right-radius: 3rem;
+  border-left: none;
+  background-color: white;
+}
+
+.task-card .__complete-btn {
+  color: #C0FFB5;
+}
+
+.task-card .__remove-btn {
+  color: #FF8080;
 }
 
 .schedule {
