added styling of the task card.

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -14,6 +14,8 @@ $light-grey-3: #F9F9F9;
 
 $dark-blue-1: #717AFF;
 $dark-blue-2: #3400FF;
+$dark-blue-3: #4F637A;
+$dark-blue-4: #284880;
 
 $medium-blue-1: #5B9CFF;
 $medium-blue-2: #619AF0;
@@ -26,6 +28,7 @@ $light-blue-1: #A5C3F7;
 $light-blue-2: #73B9FF;
 $light-blue-3: #8AB5FF;
 $light-blue-4: #6CA3FF;
+$light-blue-5: #ADDEFF;
 
 $lighter-blue-1: #B8F5FF;
 $lighter-blue-2: #B5C9FF;
@@ -39,3 +42,5 @@ $turquoise-2: #D5FFFF;
 $light-green-1: #C0FFB5;
 
 $light-red-1: #FF8080;
+
+$light-purple-1: #8E84EB;
