finished styling task page and re-implemented previously added features on new design.

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -39,7 +39,11 @@ $lighter-blue-5: #E4EFFF;
 $turquoise-1: #A1FFFF;
 $turquoise-2: #D5FFFF;
 
+$medium-green-1: #65C954;
+
 $light-green-1: #C0FFB5;
+
+$medium-red-1: #E15050;
 
 $light-red-1: #FF8080;
 
