--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -181,6 +181,21 @@
           user-select: none;
 }
 
+.col-1-of-1 {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.col-1-of-2 {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.col-1-of-3 {
+  -ms-flex-preferred-size: 33%;
+      flex-basis: 33%;
+}
+
 .header {
   background: linear-gradient(130deg, #5B9CFF, #619AF0);
 }
