--- a/style/newTaskWindow/components/_main-container.scss
+++ b/style/newTaskWindow/components/_main-container.scss
@@ -1,4 +1,74 @@
 
 .main-container {
     background-color: white;
+    padding: 1rem;
+    overflow: auto;
+    color: $dark-grey-2;
+    font-weight: 300;
+    font-family: 'Ebrima', serif;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+
+    & h3 {
+        font-size: 1.45em;
+        margin: 0;
+        font-weight: 300;
+        margin-bottom: 1rem;
+        margin-left: 1rem;
+        text-decoration: underline;
+    }
+
+    & .__title {
+        border-radius: 0.5rem;
+        border: 0.5px solid $dark-grey-2;
+        padding: 0.2rem;
+        font-size: 1.2em;
+        color: $dark-grey-2;
+        font-family: 'Trebuchet MS', serif;
+        margin-bottom: 2rem;
+    }
+
+    & .__desc {
+        text-justify: left;
+        padding: 0.5rem;
+        font-size: 1.2em;
+        color: $dark-grey-2;
+        font-family: 'Trebuchet MS', serif;
+        overflow: auto;
+        border-radius: 0.5rem;
+        margin-bottom: 2rem;
+
+    }
+
+    & span {
+        font-size: 2.25em;
+    }
+
+    & .__repeat {
+        color: $medium-red-1;
+        font-size: 1.45em;
+    }
+
+    & .__notification {
+        color: $medium-green-1;
+        font-size: 1.45em;
+
+    }
+
+    &::-webkit-scrollbar {
+        width: 1rem;
+        padding-right: 0.5rem;
+        padding-top: 0.5rem;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 0.8rem;
+        box-shadow: inset 0 0 10px 10px $light-blue-5;
+        border: 0.35rem solid transparent;
+    }
 }
