--- a/style/newTaskWindow/main.css
+++ b/style/newTaskWindow/main.css
@@ -181,8 +181,23 @@
           user-select: none;
 }
 
+.col-1-of-1 {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.col-1-of-2 {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.col-1-of-3 {
+  -ms-flex-preferred-size: 33%;
+      flex-basis: 33%;
+}
+
 body {
-  font-size: 60%;
+  font-size: 100%;
   padding: 0px;
   margin: 0px;
   overflow: hidden;
@@ -199,25 +214,6 @@ body .main {
   background-color: red;
   width: 100vw;
   height: 90vh;
-}
-
-::-webkit-scrollbar {
-  width: 0.8rem;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 5px grey;
-          box-shadow: inset 0 0 5px grey;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgba(250, 240, 230, 0.4);
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-::-webkit-scrollbar-thumb:active {
-  background-color: rgba(250, 240, 230, 0.6);
 }
 
 .header {
@@ -238,5 +234,77 @@ body .main {
 
 .main-container {
   background-color: white;
+  padding: 1rem;
+  overflow: auto;
+  color: #707070;
+  font-weight: 300;
+  font-family: 'Ebrima', serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow: auto;
+}
+
+.main-container h3 {
+  font-size: 1.45em;
+  margin: 0;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+  text-decoration: underline;
+}
+
+.main-container .__title {
+  border-radius: 0.5rem;
+  border: 0.5px solid #707070;
+  padding: 0.2rem;
+  font-size: 1.2em;
+  color: #707070;
+  font-family: 'Trebuchet MS', serif;
+  margin-bottom: 2rem;
+}
+
+.main-container .__desc {
+  text-justify: left;
+  padding: 0.5rem;
+  font-size: 1.2em;
+  color: #707070;
+  font-family: 'Trebuchet MS', serif;
+  overflow: auto;
+  border-radius: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.main-container span {
+  font-size: 2.25em;
+}
+
+.main-container .__repeat {
+  color: #E15050;
+  font-size: 1.45em;
+}
+
+.main-container .__notification {
+  color: #65C954;
+  font-size: 1.45em;
+}
+
+.main-container::-webkit-scrollbar {
+  width: 1rem;
+  padding-right: 0.5rem;
+  padding-top: 0.5rem;
+}
+
+.main-container::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.main-container::-webkit-scrollbar-thumb {
+  border-radius: 0.8rem;
+  -webkit-box-shadow: inset 0 0 10px 10px #ADDEFF;
+          box-shadow: inset 0 0 10px 10px #ADDEFF;
+  border: 0.35rem solid transparent;
 }
 /*# sourceMappingURL=main.css.map */
