--- a/style/newTaskWindow/components/_main-container.scss
+++ b/style/newTaskWindow/components/_main-container.scss
@@ -15,7 +15,6 @@
         margin: 0;
         font-weight: 300;
         margin-bottom: 1rem;
-        margin-left: 1rem;
         text-decoration: underline;
     }
 
@@ -23,37 +22,52 @@
         border-radius: 0.5rem;
         border: 0.5px solid $dark-grey-2;
         padding: 0.2rem;
+        width: calc(100% - 0.4rem);
         font-size: 1.2em;
         color: $dark-grey-2;
         font-family: 'Trebuchet MS', serif;
-        margin-bottom: 2rem;
+        margin-bottom: 1.5rem;
     }
 
     & .__desc {
         text-justify: left;
+        width: calc(100% - 1rem);
         padding: 0.5rem;
         font-size: 1.2em;
         color: $dark-grey-2;
         font-family: 'Trebuchet MS', serif;
         overflow: auto;
         border-radius: 0.5rem;
-        margin-bottom: 2rem;
-
+        margin-bottom: 1.5rem;
     }
 
-    & span {
-        font-size: 2.25em;
+    & .__time-btn {
+        border-radius: 0.2rem;
+        width: 30%;
+        height: 2rem;
+        color: white;
+        font-size: 1.5em;
+        background: linear-gradient(135deg, $light-blue-4, $medium-blue-3);
+        margin-bottom: 1.5rem;
     }
 
-    & .__repeat {
-        color: $medium-red-1;
-        font-size: 1.45em;
+    & .__confirm-btn {
+        bottom: 0;
+        width: 20%;
+        height: 3.5rem;
+        background: linear-gradient(135deg, $light-blue-3, $medium-blue-1);
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+        color: white;
+        font-size: 1.5em;
+        border-bottom: none;
     }
 
-    & .__notification {
-        color: $medium-green-1;
-        font-size: 1.45em;
 
+    & .listbox {
+        width: 50%;
+        font-size: 1.3em;
+        color: $dark-grey-2;
     }
 
     &::-webkit-scrollbar {
