--- a/style/newTaskWindow/main.css
+++ b/style/newTaskWindow/main.css
@@ -48,6 +48,13 @@
   margin-right: auto;
 }
 
+.vt-align-margins {
+  top: 0;
+  bottom: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .vt-align-flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -231,6 +238,8 @@ body .header {
 .main-container {
   background-color: white;
   padding: 1rem;
+  width: calc(100vw - 2rem);
+  height: calc(85vh - 2rem);
   overflow: auto;
   color: #707070;
   font-weight: 300;
@@ -238,6 +247,8 @@ body .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   overflow: auto;
@@ -317,5 +328,50 @@ body .header {
   -webkit-box-shadow: inset 0 0 10px 10px #ADDEFF;
           box-shadow: inset 0 0 10px 10px #ADDEFF;
   border: 0.35rem solid transparent;
+}
+
+.time-input {
+  position: relative;
+  background: linear-gradient(160deg, rgba(165, 195, 247, 0.8), rgba(213, 255, 255, 0.8));
+  border-left: 0.5px solid #707070;
+  border-right: 0.5px solid #707070;
+  width: 20%;
+  height: 85vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.time-input .__hours-input {
+  height: 100%;
+  width: 50%;
+}
+
+.time-input .__hours-input .__hours-bar {
+  width: 5rem;
+  height: 23rem;
+  background: linear-gradient(135deg, #8E84EB, #A5C3F7);
+  border-radius: 3rem;
+}
+
+.time-input .__minutes-input {
+  height: 100%;
+  width: 50%;
+}
+
+.time-input .__minutes-input .__minutes-bar {
+  width: 5rem;
+  height: 12rem;
+  background: linear-gradient(-135deg, #8E84EB, #A5C3F7);
+  border-radius: 3rem;
+}
+
+.time-input .__label {
+  font-size: 1.5em;
+  width: 2.25rem;
+  color: #717AFF;
+  background-color: white;
+  border: none;
+  border-radius: 0.5rem;
 }
 /*# sourceMappingURL=main.css.map */
