--- a/style/newTaskWindow/components/_time-input.scss
+++ b/style/newTaskWindow/components/_time-input.scss
@@ -1,11 +1,25 @@
 
-.time-input {
-    position: relative;
-    background: linear-gradient(160deg, rgba($light-blue-1, 0.8), rgba($turquoise-2, 0.8));
-    border-left: 0.5px solid $dark-grey-2;
-    border-right: 0.5px solid $dark-grey-2;
-    width: 20%;
+.time-input-container {
+    background: linear-gradient(160deg, rgba($light-blue-1, 0.65), rgba($turquoise-2, 0.65));
+    width: 100%;
     height: 85vh;
+}
+
+@mixin increment-button {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 0.5rem;
+    padding-bottom: 0.25rem;
+    color: $dark-blue-1;
+    font-size: 3em;
+    background-color: white;
+    user-select: none;
+}
+
+
+.time-input {
+    width: 20%;
+    height: 100%;
     display: flex;
 
     & .__hours-input {
@@ -14,9 +28,10 @@
 
         & .__hours-bar {
             width: 5rem;
-            height: 23rem;;
+            height: 2.5rem;;
             background: linear-gradient( 135deg, $light-purple-1, $light-blue-1);
             border-radius: 3rem;
+            transition: all 0.15s;
         }
     }
 
@@ -26,19 +41,37 @@
 
         & .__minutes-bar {
             width: 5rem;
-            height: 12rem;;
+            height: 2.5rem;
             background: linear-gradient( -135deg, $light-purple-1, $light-blue-1);
             border-radius: 3rem;
+            transition: all 0.15s;
         }
     }
 
     & .__label {
         font-size: 1.5em;
-        width: 2.25rem;
-        color:$dark-blue-1;
+        width: 2.5rem;
+        color: $dark-grey-2;
         background-color: white;
         border: none;
         border-radius: 0.5rem;
     }
+
+    & .__colon {
+        color: $dark-grey-2;
+        padding-bottom: 0.5rem;
+    }
+
+    & .__plus {
+        top: 2rem;
+        @include increment-button;
+        
+    }
+
+    & .__minus {
+        bottom: 2rem;
+        @include increment-button;
+    }
+
 
 }
